--- a/xmonad-phenax-config.cabal
+++ b/xmonad-phenax-config.cabal
@@ -15,9 +15,14 @@ common common-def
     , xmobar
     , xmonad
     , xmonad-contrib
-
-executable bar
-  import: common-def
-  main-is: ../bar.hs
+    , extensible-exceptions
   hs-source-dirs: lib
   default-language: Haskell2010
+
+executable statusbar
+  import: common-def
+  main-is: ../bar.hs
+
+executable window-manager
+  import: common-def
+  main-is: ../xmonad.hs
