--- a/xmonad-phenax-config.cabal
+++ b/xmonad-phenax-config.cabal
@@ -16,13 +16,13 @@ common common-def
     , xmonad
     , xmonad-contrib
     , extensible-exceptions
-  hs-source-dirs: lib
+  hs-source-dirs: src
   default-language: Haskell2010
 
 executable statusbar
   import: common-def
-  main-is: ../bar.hs
+  main-is: ./Bar.hs
 
 executable window-manager
   import: common-def
-  main-is: ../xmonad.hs
+  main-is: ./XmonadConfig.hs
