--- a/cabal.project
+++ b/cabal.project
@@ -1,3 +1,3 @@
 packages: .
 constraints:
-  xmobar +with_xft +with_threaded +with_rtsopts
+  xmobar +with_xft +with_threaded +with_rtsopts +with_alsa +with_utf8
