--- a/hie.yaml
+++ b/hie.yaml
@@ -4,7 +4,7 @@ cradle:
       component: "lib:xmonad-phenax-config"
 
     - path: "./src/Bar.hs"
-      component: "xmonad-phenax-config:exe:statusbar"
+      component: "xmonad-phenax-config:exe:xmobar"
 
     - path: "./src/XmonadConfig.hs"
-      component: "xmonad-phenax-config:exe:window-manager"
+      component: "xmonad-phenax-config:exe:xmonad-wm"
