--- a/xmonad-phenax-config.cabal
+++ b/xmonad-phenax-config.cabal
@@ -30,10 +30,10 @@ library
     , Lib.Theme
     , Lib.Utils
 
-executable statusbar
+executable xmobar
   import: common-def
   main-is: ./Bar.hs
 
-executable window-manager
+executable xmonad-wm
   import: common-def
   main-is: ./XmonadConfig.hs
