--- a/xmonad-phenax-config.cabal
+++ b/xmonad-phenax-config.cabal
@@ -19,16 +19,16 @@ common common-def
     , extensible-exceptions
   hs-source-dirs: src
   default-language: Haskell2010
-
-library
-  import: common-def
-  exposed-modules:
+  other-modules:
       Lib.Config
     , Lib.Keybindings
     , Lib.Layouts
     , Lib.Scratchpads
     , Lib.Theme
     , Lib.Utils
+
+library
+  import: common-def
 
 executable xmobar
   import: common-def
