--- a/xmonad-phenax-config.cabal
+++ b/xmonad-phenax-config.cabal
@@ -19,6 +19,9 @@ common common-def
     , extensible-exceptions
   hs-source-dirs: src
   default-language: Haskell2010
+  default-extensions:
+      LambdaCase
+      FlexibleContexts
   other-modules:
       Lib.Config
     , Lib.Keybindings
