--- a/xmonad-phenax-config.cabal
+++ b/xmonad-phenax-config.cabal
@@ -13,9 +13,9 @@ common common-def
     , process
     , containers
     , parsec
-    , xmobar <= 0.44.2
-    , xmonad <= 0.17.0
-    , xmonad-contrib <= 0.17.0
+    , xmobar
+    , xmonad
+    , xmonad-contrib
     , extensible-exceptions
   hs-source-dirs: src
   default-language: Haskell2010
